bi.output
Terminals unused in grammar

   BOOLEAN


Grammar

    0 $accept: program $end

    1 program: mainClass classDeclarations

    2 mainClass: CLASS ID '{' PUBLIC STATIC VOID MAIN '(' STRING_TYPE '[' ']' ID ')' '{' statement '}' '}'

    3 classDeclarations: /* empty */
    4                  | classDeclaration classDeclarations

    5 classDeclaration: CLASS ID '{' varDeclarations methodDeclarations '}'
    6                 | CLASS ID EXTENDS ID '{' varDeclarations methodDeclarations '}'

    7 varDeclarations: /* empty */
    8                | varDeclarations varDeclaration

    9 varDeclaration: type ID ';'

   10 methodDeclarations: /* empty */
   11                   | methodDeclaration methodDeclarations

   12 methodDeclaration: PUBLIC type ID '(' arguements ')' '{' varDeclarations statements RETURN expression ';' '}'

   13 statements: /* empty */
   14           | statement statements

   15 statement: '{' statements '}'
   16          | assignment ';'
   17          | IF '(' expression ')' statement ELSE statement
   18          | WHILE '(' expression ')' statement
   19          | SYSPRINT '(' expression ')' ';'
   20          | ID '[' expression ']' ASSIGN expression ';'

   21 type: INT_TYPE '[' ']'
   22     | BOOLEAN_TYPE
   23     | STRING_TYPE
   24     | INT_TYPE
   25     | ID

   26 arguements: /* empty */
   27           | arguement ',' arguements
   28           | arguement

   29 arguement: type ID

   30 assignment: ID ASSIGN expression

   31 expression: expression '+' expression
   32           | expression '-' expression
   33           | expression '*' expression
   34           | expression '/' expression
   35           | expression AND expression
   36           | expression LT expression
   37           | expression '[' expression ']'
   38           | expression '.' LENGTH
   39           | expression '.' ID '(' expressionList ')'
   40           | INTEGER
   41           | TRUE
   42           | FALSE
   43           | ID
   44           | THIS
   45           | NEW INT_TYPE '[' expression ']'
   46           | NEW ID '(' ')'
   47           | '!' expression
   48           | '(' expression ')'

   49 expressionList: /* empty */
   50               | expression ',' expressionList
   51               | expression


Terminals, with rules where they appear

$end (0) 0
'!' (33) 47
'(' (40) 2 12 17 18 19 39 46 48
')' (41) 2 12 17 18 19 39 46 48
'*' (42) 33
'+' (43) 31
',' (44) 27 50
'-' (45) 32
'.' (46) 38 39
'/' (47) 34
';' (59) 9 12 16 19 20
'[' (91) 2 20 21 37 45
']' (93) 2 20 21 37 45
'{' (123) 2 5 6 12 15
'}' (125) 2 5 6 12 15
error (256)
INTEGER (258) 40
BOOLEAN (259)
ID (260) 2 5 6 9 12 20 25 29 30 39 43 46
CLASS (261) 2 5 6
EXTENDS (262) 6
PUBLIC (263) 2 12
STATIC (264) 2
MAIN (265) 2
IF (266) 17
WHILE (267) 18
TRUE (268) 41
FALSE (269) 42
NEW (270) 45 46
THIS (271) 44
VOID (272) 2
RETURN (273) 12
SYSPRINT (274) 19
LENGTH (275) 38
ELSE (276) 17
INT_TYPE (277) 21 24 45
BOOLEAN_TYPE (278) 22
STRING_TYPE (279) 2 23
ASSIGN (280) 20 30
AND (281) 35
LT (282) 36


Nonterminals, with rules where they appear

$accept (42)
    on left: 0
program (43)
    on left: 1, on right: 0
mainClass (44)
    on left: 2, on right: 1
classDeclarations (45)
    on left: 3 4, on right: 1 4
classDeclaration (46)
    on left: 5 6, on right: 4
varDeclarations (47)
    on left: 7 8, on right: 5 6 8 12
varDeclaration (48)
    on left: 9, on right: 8
methodDeclarations (49)
    on left: 10 11, on right: 5 6 11
methodDeclaration (50)
    on left: 12, on right: 11
statements (51)
    on left: 13 14, on right: 12 14 15
statement (52)
    on left: 15 16 17 18 19 20, on right: 2 14 17 18
type (53)
    on left: 21 22 23 24 25, on right: 9 12 29
arguements (54)
    on left: 26 27 28, on right: 12 27
arguement (55)
    on left: 29, on right: 27 28
assignment (56)
    on left: 30, on right: 16
expression (57)
    on left: 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48,
    on right: 12 17 18 19 20 30 31 32 33 34 35 36 37 38 39 45 47 48
    50 51
expressionList (58)
    on left: 49 50 51, on right: 39 50


State 0

    0 $accept: . program $end

    CLASS  shift, and go to state 1

    program    go to state 2
    mainClass  go to state 3


State 1

    2 mainClass: CLASS . ID '{' PUBLIC STATIC VOID MAIN '(' STRING_TYPE '[' ']' ID ')' '{' statement '}' '}'

    ID  shift, and go to state 4


State 2

    0 $accept: program . $end

    $end  shift, and go to state 5


State 3

    1 program: mainClass . classDeclarations

    CLASS  shift, and go to state 6

    $default  reduce using rule 3 (classDeclarations)

    classDeclarations  go to state 7
    classDeclaration   go to state 8


State 4

    2 mainClass: CLASS ID . '{' PUBLIC STATIC VOID MAIN '(' STRING_TYPE '[' ']' ID ')' '{' statement '}' '}'

    '{'  shift, and go to state 9


State 5

    0 $accept: program $end .

    $default  accept


State 6

    5 classDeclaration: CLASS . ID '{' varDeclarations methodDeclarations '}'
    6                 | CLASS . ID EXTENDS ID '{' varDeclarations methodDeclarations '}'

    ID  shift, and go to state 10


State 7

    1 program: mainClass classDeclarations .

    $default  reduce using rule 1 (program)


State 8

    4 classDeclarations: classDeclaration . classDeclarations

    CLASS  shift, and go to state 6

    $default  reduce using rule 3 (classDeclarations)

    classDeclarations  go to state 11
    classDeclaration   go to state 8


State 9

    2 mainClass: CLASS ID '{' . PUBLIC STATIC VOID MAIN '(' STRING_TYPE '[' ']' ID ')' '{' statement '}' '}'

    PUBLIC  shift, and go to state 12


State 10

    5 classDeclaration: CLASS ID . '{' varDeclarations methodDeclarations '}'
    6                 | CLASS ID . EXTENDS ID '{' varDeclarations methodDeclarations '}'

    EXTENDS  shift, and go to state 13
    '{'      shift, and go to state 14


State 11

    4 classDeclarations: classDeclaration classDeclarations .

    $default  reduce using rule 4 (classDeclarations)


State 12

    2 mainClass: CLASS ID '{' PUBLIC . STATIC VOID MAIN '(' STRING_TYPE '[' ']' ID ')' '{' statement '}' '}'

    STATIC  shift, and go to state 15


State 13

    6 classDeclaration: CLASS ID EXTENDS . ID '{' varDeclarations methodDeclarations '}'

    ID  shift, and go to state 16


State 14

    5 classDeclaration: CLASS ID '{' . varDeclarations methodDeclarations '}'

    $default  reduce using rule 7 (varDeclarations)

    varDeclarations  go to state 17


State 15

    2 mainClass: CLASS ID '{' PUBLIC STATIC . VOID MAIN '(' STRING_TYPE '[' ']' ID ')' '{' statement '}' '}'

    VOID  shift, and go to state 18


State 16

    6 classDeclaration: CLASS ID EXTENDS ID . '{' varDeclarations methodDeclarations '}'

    '{'  shift, and go to state 19


State 17

    5 classDeclaration: CLASS ID '{' varDeclarations . methodDeclarations '}'
    8 varDeclarations: varDeclarations . varDeclaration

    ID            shift, and go to state 20
    PUBLIC        shift, and go to state 21
    INT_TYPE      shift, and go to state 22
    BOOLEAN_TYPE  shift, and go to state 23
    STRING_TYPE   shift, and go to state 24

    $default  reduce using rule 10 (methodDeclarations)

    varDeclaration      go to state 25
    methodDeclarations  go to state 26
    methodDeclaration   go to state 27
    type                go to state 28


State 18

    2 mainClass: CLASS ID '{' PUBLIC STATIC VOID . MAIN '(' STRING_TYPE '[' ']' ID ')' '{' statement '}' '}'

    MAIN  shift, and go to state 29


State 19

    6 classDeclaration: CLASS ID EXTENDS ID '{' . varDeclarations methodDeclarations '}'

    $default  reduce using rule 7 (varDeclarations)

    varDeclarations  go to state 30


State 20

   25 type: ID .

    $default  reduce using rule 25 (type)


State 21

   12 methodDeclaration: PUBLIC . type ID '(' arguements ')' '{' varDeclarations statements RETURN expression ';' '}'

    ID            shift, and go to state 20
    INT_TYPE      shift, and go to state 22
    BOOLEAN_TYPE  shift, and go to state 23
    STRING_TYPE   shift, and go to state 24

    type  go to state 31


State 22

   21 type: INT_TYPE . '[' ']'
   24     | INT_TYPE .

    '['  shift, and go to state 32

    $default  reduce using rule 24 (type)


State 23

   22 type: BOOLEAN_TYPE .

    $default  reduce using rule 22 (type)


State 24

   23 type: STRING_TYPE .

    $default  reduce using rule 23 (type)


State 25

    8 varDeclarations: varDeclarations varDeclaration .

    $default  reduce using rule 8 (varDeclarations)


State 26

    5 classDeclaration: CLASS ID '{' varDeclarations methodDeclarations . '}'

    '}'  shift, and go to state 33


State 27

   11 methodDeclarations: methodDeclaration . methodDeclarations

    PUBLIC  shift, and go to state 21

    $default  reduce using rule 10 (methodDeclarations)

    methodDeclarations  go to state 34
    methodDeclaration   go to state 27


State 28

    9 varDeclaration: type . ID ';'

    ID  shift, and go to state 35


State 29

    2 mainClass: CLASS ID '{' PUBLIC STATIC VOID MAIN . '(' STRING_TYPE '[' ']' ID ')' '{' statement '}' '}'

    '('  shift, and go to state 36


State 30

    6 classDeclaration: CLASS ID EXTENDS ID '{' varDeclarations . methodDeclarations '}'
    8 varDeclarations: varDeclarations . varDeclaration

    ID            shift, and go to state 20
    PUBLIC        shift, and go to state 21
    INT_TYPE      shift, and go to state 22
    BOOLEAN_TYPE  shift, and go to state 23
    STRING_TYPE   shift, and go to state 24

    $default  reduce using rule 10 (methodDeclarations)

    varDeclaration      go to state 25
    methodDeclarations  go to state 37
    methodDeclaration   go to state 27
    type                go to state 28


State 31

   12 methodDeclaration: PUBLIC type . ID '(' arguements ')' '{' varDeclarations statements RETURN expression ';' '}'

    ID  shift, and go to state 38


State 32

   21 type: INT_TYPE '[' . ']'

    ']'  shift, and go to state 39


State 33

    5 classDeclaration: CLASS ID '{' varDeclarations methodDeclarations '}' .

    $default  reduce using rule 5 (classDeclaration)


State 34

   11 methodDeclarations: methodDeclaration methodDeclarations .

    $default  reduce using rule 11 (methodDeclarations)


State 35

    9 varDeclaration: type ID . ';'

    ';'  shift, and go to state 40


State 36

    2 mainClass: CLASS ID '{' PUBLIC STATIC VOID MAIN '(' . STRING_TYPE '[' ']' ID ')' '{' statement '}' '}'

    STRING_TYPE  shift, and go to state 41


State 37

    6 classDeclaration: CLASS ID EXTENDS ID '{' varDeclarations methodDeclarations . '}'

    '}'  shift, and go to state 42


State 38

   12 methodDeclaration: PUBLIC type ID . '(' arguements ')' '{' varDeclarations statements RETURN expression ';' '}'

    '('  shift, and go to state 43


State 39

   21 type: INT_TYPE '[' ']' .

    $default  reduce using rule 21 (type)


State 40

    9 varDeclaration: type ID ';' .

    $default  reduce using rule 9 (varDeclaration)


State 41

    2 mainClass: CLASS ID '{' PUBLIC STATIC VOID MAIN '(' STRING_TYPE . '[' ']' ID ')' '{' statement '}' '}'

    '['  shift, and go to state 44


State 42

    6 classDeclaration: CLASS ID EXTENDS ID '{' varDeclarations methodDeclarations '}' .

    $default  reduce using rule 6 (classDeclaration)


State 43

   12 methodDeclaration: PUBLIC type ID '(' . arguements ')' '{' varDeclarations statements RETURN expression ';' '}'

    ID            shift, and go to state 20
    INT_TYPE      shift, and go to state 22
    BOOLEAN_TYPE  shift, and go to state 23
    STRING_TYPE   shift, and go to state 24

    $default  reduce using rule 26 (arguements)

    type        go to state 45
    arguements  go to state 46
    arguement   go to state 47


State 44

    2 mainClass: CLASS ID '{' PUBLIC STATIC VOID MAIN '(' STRING_TYPE '[' . ']' ID ')' '{' statement '}' '}'

    ']'  shift, and go to state 48


State 45

   29 arguement: type . ID

    ID  shift, and go to state 49


State 46

   12 methodDeclaration: PUBLIC type ID '(' arguements . ')' '{' varDeclarations statements RETURN expression ';' '}'

    ')'  shift, and go to state 50


State 47

   27 arguements: arguement . ',' arguements
   28           | arguement .

    ','  shift, and go to state 51

    $default  reduce using rule 28 (arguements)


State 48

    2 mainClass: CLASS ID '{' PUBLIC STATIC VOID MAIN '(' STRING_TYPE '[' ']' . ID ')' '{' statement '}' '}'

    ID  shift, and go to state 52


State 49

   29 arguement: type ID .

    $default  reduce using rule 29 (arguement)


State 50

   12 methodDeclaration: PUBLIC type ID '(' arguements ')' . '{' varDeclarations statements RETURN expression ';' '}'

    '{'  shift, and go to state 53


State 51

   27 arguements: arguement ',' . arguements

    ID            shift, and go to state 20
    INT_TYPE      shift, and go to state 22
    BOOLEAN_TYPE  shift, and go to state 23
    STRING_TYPE   shift, and go to state 24

    $default  reduce using rule 26 (arguements)

    type        go to state 45
    arguements  go to state 54
    arguement   go to state 47


State 52

    2 mainClass: CLASS ID '{' PUBLIC STATIC VOID MAIN '(' STRING_TYPE '[' ']' ID . ')' '{' statement '}' '}'

    ')'  shift, and go to state 55


State 53

   12 methodDeclaration: PUBLIC type ID '(' arguements ')' '{' . varDeclarations statements RETURN expression ';' '}'

    $default  reduce using rule 7 (varDeclarations)

    varDeclarations  go to state 56


State 54

   27 arguements: arguement ',' arguements .

    $default  reduce using rule 27 (arguements)


State 55

    2 mainClass: CLASS ID '{' PUBLIC STATIC VOID MAIN '(' STRING_TYPE '[' ']' ID ')' . '{' statement '}' '}'

    '{'  shift, and go to state 57


State 56

    8 varDeclarations: varDeclarations . varDeclaration
   12 methodDeclaration: PUBLIC type ID '(' arguements ')' '{' varDeclarations . statements RETURN expression ';' '}'

    ID            shift, and go to state 58
    IF            shift, and go to state 59
    WHILE         shift, and go to state 60
    SYSPRINT      shift, and go to state 61
    INT_TYPE      shift, and go to state 22
    BOOLEAN_TYPE  shift, and go to state 23
    STRING_TYPE   shift, and go to state 24
    '{'           shift, and go to state 62

    $default  reduce using rule 13 (statements)

    varDeclaration  go to state 25
    statements      go to state 63
    statement       go to state 64
    type            go to state 28
    assignment      go to state 65


State 57

    2 mainClass: CLASS ID '{' PUBLIC STATIC VOID MAIN '(' STRING_TYPE '[' ']' ID ')' '{' . statement '}' '}'

    ID        shift, and go to state 66
    IF        shift, and go to state 59
    WHILE     shift, and go to state 60
    SYSPRINT  shift, and go to state 61
    '{'       shift, and go to state 62

    statement   go to state 67
    assignment  go to state 65


State 58

   20 statement: ID . '[' expression ']' ASSIGN expression ';'
   25 type: ID .
   30 assignment: ID . ASSIGN expression

    ASSIGN  shift, and go to state 68
    '['     shift, and go to state 69

    $default  reduce using rule 25 (type)


State 59

   17 statement: IF . '(' expression ')' statement ELSE statement

    '('  shift, and go to state 70


State 60

   18 statement: WHILE . '(' expression ')' statement

    '('  shift, and go to state 71


State 61

   19 statement: SYSPRINT . '(' expression ')' ';'

    '('  shift, and go to state 72


State 62

   15 statement: '{' . statements '}'

    ID        shift, and go to state 66
    IF        shift, and go to state 59
    WHILE     shift, and go to state 60
    SYSPRINT  shift, and go to state 61
    '{'       shift, and go to state 62

    $default  reduce using rule 13 (statements)

    statements  go to state 73
    statement   go to state 64
    assignment  go to state 65


State 63

   12 methodDeclaration: PUBLIC type ID '(' arguements ')' '{' varDeclarations statements . RETURN expression ';' '}'

    RETURN  shift, and go to state 74


State 64

   14 statements: statement . statements

    ID        shift, and go to state 66
    IF        shift, and go to state 59
    WHILE     shift, and go to state 60
    SYSPRINT  shift, and go to state 61
    '{'       shift, and go to state 62

    $default  reduce using rule 13 (statements)

    statements  go to state 75
    statement   go to state 64
    assignment  go to state 65


State 65

   16 statement: assignment . ';'

    ';'  shift, and go to state 76


State 66

   20 statement: ID . '[' expression ']' ASSIGN expression ';'
   30 assignment: ID . ASSIGN expression

    ASSIGN  shift, and go to state 68
    '['     shift, and go to state 69


State 67

    2 mainClass: CLASS ID '{' PUBLIC STATIC VOID MAIN '(' STRING_TYPE '[' ']' ID ')' '{' statement . '}' '}'

    '}'  shift, and go to state 77


State 68

   30 assignment: ID ASSIGN . expression

    INTEGER  shift, and go to state 78
    ID       shift, and go to state 79
    TRUE     shift, and go to state 80
    FALSE    shift, and go to state 81
    NEW      shift, and go to state 82
    THIS     shift, and go to state 83
    '!'      shift, and go to state 84
    '('      shift, and go to state 85

    expression  go to state 86


State 69

   20 statement: ID '[' . expression ']' ASSIGN expression ';'

    INTEGER  shift, and go to state 78
    ID       shift, and go to state 79
    TRUE     shift, and go to state 80
    FALSE    shift, and go to state 81
    NEW      shift, and go to state 82
    THIS     shift, and go to state 83
    '!'      shift, and go to state 84
    '('      shift, and go to state 85

    expression  go to state 87


State 70

   17 statement: IF '(' . expression ')' statement ELSE statement

    INTEGER  shift, and go to state 78
    ID       shift, and go to state 79
    TRUE     shift, and go to state 80
    FALSE    shift, and go to state 81
    NEW      shift, and go to state 82
    THIS     shift, and go to state 83
    '!'      shift, and go to state 84
    '('      shift, and go to state 85

    expression  go to state 88


State 71

   18 statement: WHILE '(' . expression ')' statement

    INTEGER  shift, and go to state 78
    ID       shift, and go to state 79
    TRUE     shift, and go to state 80
    FALSE    shift, and go to state 81
    NEW      shift, and go to state 82
    THIS     shift, and go to state 83
    '!'      shift, and go to state 84
    '('      shift, and go to state 85

    expression  go to state 89


State 72

   19 statement: SYSPRINT '(' . expression ')' ';'

    INTEGER  shift, and go to state 78
    ID       shift, and go to state 79
    TRUE     shift, and go to state 80
    FALSE    shift, and go to state 81
    NEW      shift, and go to state 82
    THIS     shift, and go to state 83
    '!'      shift, and go to state 84
    '('      shift, and go to state 85

    expression  go to state 90


State 73

   15 statement: '{' statements . '}'

    '}'  shift, and go to state 91


State 74

   12 methodDeclaration: PUBLIC type ID '(' arguements ')' '{' varDeclarations statements RETURN . expression ';' '}'

    INTEGER  shift, and go to state 78
    ID       shift, and go to state 79
    TRUE     shift, and go to state 80
    FALSE    shift, and go to state 81
    NEW      shift, and go to state 82
    THIS     shift, and go to state 83
    '!'      shift, and go to state 84
    '('      shift, and go to state 85

    expression  go to state 92


State 75

   14 statements: statement statements .

    $default  reduce using rule 14 (statements)


State 76

   16 statement: assignment ';' .

    $default  reduce using rule 16 (statement)


State 77

    2 mainClass: CLASS ID '{' PUBLIC STATIC VOID MAIN '(' STRING_TYPE '[' ']' ID ')' '{' statement '}' . '}'

    '}'  shift, and go to state 93


State 78

   40 expression: INTEGER .

    $default  reduce using rule 40 (expression)


State 79

   43 expression: ID .

    $default  reduce using rule 43 (expression)


State 80

   41 expression: TRUE .

    $default  reduce using rule 41 (expression)


State 81

   42 expression: FALSE .

    $default  reduce using rule 42 (expression)


State 82

   45 expression: NEW . INT_TYPE '[' expression ']'
   46           | NEW . ID '(' ')'

    ID        shift, and go to state 94
    INT_TYPE  shift, and go to state 95


State 83

   44 expression: THIS .

    $default  reduce using rule 44 (expression)


State 84

   47 expression: '!' . expression

    INTEGER  shift, and go to state 78
    ID       shift, and go to state 79
    TRUE     shift, and go to state 80
    FALSE    shift, and go to state 81
    NEW      shift, and go to state 82
    THIS     shift, and go to state 83
    '!'      shift, and go to state 84
    '('      shift, and go to state 85

    expression  go to state 96


State 85

   48 expression: '(' . expression ')'

    INTEGER  shift, and go to state 78
    ID       shift, and go to state 79
    TRUE     shift, and go to state 80
    FALSE    shift, and go to state 81
    NEW      shift, and go to state 82
    THIS     shift, and go to state 83
    '!'      shift, and go to state 84
    '('      shift, and go to state 85

    expression  go to state 97


State 86

   30 assignment: ID ASSIGN expression .
   31 expression: expression . '+' expression
   32           | expression . '-' expression
   33           | expression . '*' expression
   34           | expression . '/' expression
   35           | expression . AND expression
   36           | expression . LT expression
   37           | expression . '[' expression ']'
   38           | expression . '.' LENGTH
   39           | expression . '.' ID '(' expressionList ')'

    AND  shift, and go to state 98
    LT   shift, and go to state 99
    '+'  shift, and go to state 100
    '-'  shift, and go to state 101
    '*'  shift, and go to state 102
    '/'  shift, and go to state 103
    '.'  shift, and go to state 104
    '['  shift, and go to state 105

    $default  reduce using rule 30 (assignment)


State 87

   20 statement: ID '[' expression . ']' ASSIGN expression ';'
   31 expression: expression . '+' expression
   32           | expression . '-' expression
   33           | expression . '*' expression
   34           | expression . '/' expression
   35           | expression . AND expression
   36           | expression . LT expression
   37           | expression . '[' expression ']'
   38           | expression . '.' LENGTH
   39           | expression . '.' ID '(' expressionList ')'

    AND  shift, and go to state 98
    LT   shift, and go to state 99
    '+'  shift, and go to state 100
    '-'  shift, and go to state 101
    '*'  shift, and go to state 102
    '/'  shift, and go to state 103
    '.'  shift, and go to state 104
    '['  shift, and go to state 105
    ']'  shift, and go to state 106


State 88

   17 statement: IF '(' expression . ')' statement ELSE statement
   31 expression: expression . '+' expression
   32           | expression . '-' expression
   33           | expression . '*' expression
   34           | expression . '/' expression
   35           | expression . AND expression
   36           | expression . LT expression
   37           | expression . '[' expression ']'
   38           | expression . '.' LENGTH
   39           | expression . '.' ID '(' expressionList ')'

    AND  shift, and go to state 98
    LT   shift, and go to state 99
    '+'  shift, and go to state 100
    '-'  shift, and go to state 101
    '*'  shift, and go to state 102
    '/'  shift, and go to state 103
    '.'  shift, and go to state 104
    '['  shift, and go to state 105
    ')'  shift, and go to state 107


State 89

   18 statement: WHILE '(' expression . ')' statement
   31 expression: expression . '+' expression
   32           | expression . '-' expression
   33           | expression . '*' expression
   34           | expression . '/' expression
   35           | expression . AND expression
   36           | expression . LT expression
   37           | expression . '[' expression ']'
   38           | expression . '.' LENGTH
   39           | expression . '.' ID '(' expressionList ')'

    AND  shift, and go to state 98
    LT   shift, and go to state 99
    '+'  shift, and go to state 100
    '-'  shift, and go to state 101
    '*'  shift, and go to state 102
    '/'  shift, and go to state 103
    '.'  shift, and go to state 104
    '['  shift, and go to state 105
    ')'  shift, and go to state 108


State 90

   19 statement: SYSPRINT '(' expression . ')' ';'
   31 expression: expression . '+' expression
   32           | expression . '-' expression
   33           | expression . '*' expression
   34           | expression . '/' expression
   35           | expression . AND expression
   36           | expression . LT expression
   37           | expression . '[' expression ']'
   38           | expression . '.' LENGTH
   39           | expression . '.' ID '(' expressionList ')'

    AND  shift, and go to state 98
    LT   shift, and go to state 99
    '+'  shift, and go to state 100
    '-'  shift, and go to state 101
    '*'  shift, and go to state 102
    '/'  shift, and go to state 103
    '.'  shift, and go to state 104
    '['  shift, and go to state 105
    ')'  shift, and go to state 109


State 91

   15 statement: '{' statements '}' .

    $default  reduce using rule 15 (statement)


State 92

   12 methodDeclaration: PUBLIC type ID '(' arguements ')' '{' varDeclarations statements RETURN expression . ';' '}'
   31 expression: expression . '+' expression
   32           | expression . '-' expression
   33           | expression . '*' expression
   34           | expression . '/' expression
   35           | expression . AND expression
   36           | expression . LT expression
   37           | expression . '[' expression ']'
   38           | expression . '.' LENGTH
   39           | expression . '.' ID '(' expressionList ')'

    AND  shift, and go to state 98
    LT   shift, and go to state 99
    '+'  shift, and go to state 100
    '-'  shift, and go to state 101
    '*'  shift, and go to state 102
    '/'  shift, and go to state 103
    '.'  shift, and go to state 104
    '['  shift, and go to state 105
    ';'  shift, and go to state 110


State 93
